# vitaUSBtty

./: CMakeLists.txt  README.md  cmd.c  cmd.h  config.txt  coredump.h  deploy.sh  exports_kernel_usb.yml  hooks.c  hooks.h  hooks_old.c  kfuncs.c  kfuncs.h  kfuncs_old.c  kmain.c  koffsets.h  serial.c  serial.h  syscon_trace.c  syscon_trace.h  utils.c  utils.h
